--- a/tavernawebportal/templates/head.gohtml
+++ b/tavernawebportal/templates/head.gohtml
@@ -36,7 +36,7 @@
         height: 9em;
       }
 
-      #demo-absolute-fab {
+      #language-menu {
         position: fixed;
         top: 7rem;
         right: 1rem;
