added google analytics tag

--- a/tavernawebportal/templates/index.gohtml
+++ b/tavernawebportal/templates/index.gohtml
@@ -5,7 +5,11 @@
 
   <body>
     {{template "header"}}
+  
     <h1 class="mdc-toolbar-fixed-adjust mdc-typography--headline mdc-typography-adjust-margin(headline)">Cuina Tradicional Catalana en Blanes - Costa Brava</h1>
+    
+    {{template "cta"}}
+    
     <div class="cards">
       <div class="mdc-card element-card earth">
         <section class="mdc-card__media mdc-theme--primary-bg">
