--- a/tavernawebportal/templates/head.gohtml
+++ b/tavernawebportal/templates/head.gohtml
@@ -1,5 +1,15 @@
 {{define "head"}}
   <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48124297-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+      gtag('config', 'UA-48124297-2');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="public/images/apple-touch-icon.png">
@@ -63,6 +73,10 @@
         }
         .mdc-toolbar-fixed-adjust {
             margin-top: 74px;
+        }
+        a[href^="tel:"] {
+          color: #1e434c;
+          text-decoration: none;
         }
     </style>
   </head>
